Address Acknowledgements for processor and sink; Add request and response codec
Signed-off-by: Srikanth Govindarajan <srigovs@amazon.com>